# blawgd

./: .gitignore  Makefile  README.md  TODO  config.yml  genesis.json  go.mod  go.sum  readme.md
.github/workflows/: build.yml
app/: app.go  encoding.go
backends/cosmos/api/grpc/: blawgd.proto
backends/cosmos/cmd/blawgdd/: blawgdd.go
backends/cosmos/cmd/blawgdd/cmd/: root.go
backends/cosmos/cmd/faucet/: Cargo.toml
backends/cosmos/cmd/faucet/src/: cosmos_client.rs  handler.rs  main.rs
backends/cosmos/node-configs/gen-val/config/: app.toml  config.toml  genesis.json  node_key.json  (+2 more)
backends/cosmos/pkg/app/: app.go  encoding.go
client/: Cargo.toml  dep.txt
client/assets/: main.js  main.wasm  style.css
client/cmd/server/: main.go
client/cmd/wasm/: main.go
client/src/: lib.rs
client/templates/: index.html
cmd/samachard/: main.go
cmd/samachard/cmd/: root.go
docs/: ARCHITECTURE.md
faucet/: Cargo.toml
faucet/src/: main.rs
frontend-go/cmd/frontend-server/: main.go
frontend-go/cmd/wasm/: main.go
frontend-go/dst/: index.html  main.wasm
frontend-go/pkg/cosmos/types/: coin.go
frontend-go/pkg/tendermint/crypto/: crypto.go
frontend-go/pkg/tendermint/light/: client.go  detector.go  errors.go  trust_options.go  verifier.go
frontend-go/pkg/tendermint/types/: block.go  block_meta.go  canonical.go  encoding_helper.go  event_bus.go  events.go  evidence.go  genesis.go  light.go  node_id.go  node_info.go  node_key.go  params.go  part_set.go  priv_validator.go  proposal.go  protobuf.go  results.go  signable.go  signed_msg_type.go  test_util.go  tx.go  validation.go  validator.go  validator_set.go  vote.go  vote_set.go
frontend-go/pkg/tendermint/version/: version.go
frontend/codegen/: Cargo.toml
frontend/codegen/src/: main.rs
frontend/frontend-server/: Cargo.toml
frontend/frontend-server/src/: main.rs
frontend/frontend-server/src/components/: blawgd_html.rs  home_page.rs  mod.rs
frontend/rust-grpc-gen/: Cargo.toml
frontend/rust-grpc-gen/src/: main.rs
frontend/template/: edit.html
frontend/templates/: account.html  index.html  post.html
frontend/wasm/: Cargo.toml
frontend/wasm/src/: config.rs  edit_profile_page.rs  explore_page.rs  followings_page.rs  home_page.rs  lib.rs  light_client.rs  login_page.rs  post_page.rs  profile_page.rs  timeline_page.rs  util.rs
frontend/wasm/src/blawgd_client/: mod.rs  shravanshetty1.samachar.samachar.rs
frontend/wasm/src/blawgd_client/verification_client/: helpers.rs  keys.rs  mod.rs  verification_client.rs
frontend/wasm/src/components/: account_info.rs  blawgd_html.rs  edit_profile_page.rs  explore_page.rs  followings_page.rs  login_page.rs  mod.rs  nav_bar.rs  post.rs  post_creator.rs  post_page.rs  profile_page.rs
frontend/wasm/templates/: index.html
frontends/rust/client/: Cargo.toml
frontends/rust/client/src/: config.rs  context.rs  dom.rs  edit_profile_page.rs  followings_page.rs  home_page.rs  host.rs  lib.rs  light_client.rs  logger.rs  login_page.rs  post_page.rs  profile_page.rs  state.rs  storage.rs  task.rs  timeline_page.rs  util.rs
frontends/rust/server/: main.go
frontends/rust/server/dst/: app.js  index.html  style.css
frontends/rust/template/: account.html  followings.html  index1.html  login.html  post.html
proto/samachar/: genesis.proto  post.proto  query.proto  samachar.proto  tx.proto
scripts/: freshnode.sh  frontendgo.sh  initnode.sh  startnode.sh
scripts/codegen/: main.sh
scripts/codegen/backend-cosmos/: main.sh
scripts/codegen/frontend-rust/: Cargo.toml
scripts/codegen/frontend-rust/src/: main.rs
scripts/cosmos-codegen/: main.go
scripts/initnode/: initnode.sh  main.go
scripts/local-network/: main.sh
scripts/local-network/init/: main.sh
scripts/local-network/run/: main.sh  prod.sh
scripts/print-type-urls/: main.go
scripts/reverse-proxy/: main.go
vue/: README.md  package-lock.json  package.json  webpack.config.js
vue/src/: App.vue  main.js  main.ts
x/samachar/: genesis.go  handle_follow.go  handle_like.go  handle_repost.go  handle_stop_follow.go  handle_unlike.go  handle_update_account_info.go  handler.go  handler_follow.go  handler_post.go  handler_repost.go  handler_unfollow.go  module.go
x/samachar/client/cli/: query.go  tx.go
x/samachar/client/rest/: rest.go
x/samachar/keeper/: antehandler.go  block.go  getters.go  grpc_query.go  keeper.go  msg_server.go  query.go  setters.go  tx.go
x/samachar/query/: query.go
x/samachar/types/: codec.go  errors.go  genesis.go  genesis.pb.go  keys.go  message_create_repost.go  message_follow.go  message_like.go  message_post.go  message_repost.go  message_stop_follow.go  message_unfollow.go  message_unlike.go  message_update_account_info.go  post.pb.go  query.pb.go  samachar.pb.go  tx.pb.go
(+163 files in other folders)
