[package]
name = "client"
version = "0.1.0"
authors = ["Shravan Shetty <shravanshetty322@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
gloo = "0.2"
crw-wallet = { git = "https://github.com/forbole/cosmos-rust-wallet", branch = "main" }
crw-client = { git = "https://github.com/forbole/cosmos-rust-wallet", branch = "main" }
wasm-bindgen-futures = "0.4.24"
cosmos-sdk-proto = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'EventListener',
]

[patch.crates-io]
cosmos-sdk-proto = { git = "https://github.com/forbole/cosmos-rust", branch = "main"}
