[package]
name = "client"
version = "0.1.0"
authors = ["Shravan Shetty <shravanshetty322@gmail.com>"]
edition = "2018"
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
gloo = "0.2"
crw-wallet = { git = "https://github.com/shravanshetty1/cosmos-rust-wallet", branch = "grpc-web", features = ["wasm-bindgen"] }
crw-client = { git = "https://github.com/shravanshetty1/cosmos-rust-wallet", branch = "grpc-web" }
wasm-bindgen-futures = "0.4.24"
cosmos-sdk-proto = "0.5.0"
prost = { version = "0.7.0"}
console_error_panic_hook = "0.1.6"
tonic = { version = "0.4.3", default-features = false, features = ["codegen", "prost"] }
tiny-bip39 = { version = "0.8.0", default-features = false }
grpc-web-client = { git = "https://github.com/titanous/grpc-web-client", branch = "main"}

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlTextAreaElement',
    'HtmlImageElement',
    'Node',
    'Window',
    'EventListener',
    'Location',
    'Storage',
]

[patch.crates-io]
cosmos-sdk-proto = { git = "https://github.com/shravanshetty1/cosmos-rust", branch = "wasm2"}
